Bug 15534 - smbd does not detect ctdb public ipv6 addresses for multichannel exclusion
Summary: smbd does not detect ctdb public ipv6 addresses for multichannel exclusion
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Clustering (show other bugs)
Version: 4.19.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL: https://gitlab.com/samba-team/samba/-...
Keywords:
Depends on:
Blocks:
 
Reported: 2023-12-12 14:27 UTC by Stefan Metzmacher
Modified: 2024-01-31 20:42 UTC (History)
2 users (show)

See Also:


Attachments
Patch for v4-19-test (1.92 KB, patch)
2023-12-27 14:33 UTC, Stefan Metzmacher
vl: review+
Details
Patch for v4-18-test (1.92 KB, patch)
2023-12-27 14:34 UTC, Stefan Metzmacher
vl: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2023-12-12 14:27:55 UTC
ctdbd_public_ip_foreach() truncates ipv6 addresses...
Comment 1 Samba QA Contact 2023-12-21 11:10:05 UTC
This bug was referenced in samba master:

828f3c99122fb033ecb79e24ed24821b8510f0f8
Comment 2 Stefan Metzmacher 2023-12-27 14:33:44 UTC
Created attachment 18209 [details]
Patch for v4-19-test
Comment 3 Stefan Metzmacher 2023-12-27 14:34:07 UTC
Created attachment 18210 [details]
Patch for v4-18-test
Comment 4 Jule Anger 2023-12-28 16:02:45 UTC
Pushed to autobuild-v4-{19,18}-test.
Comment 5 Samba QA Contact 2023-12-28 17:10:05 UTC
This bug was referenced in samba v4-18-test:

c2c111688c49feaffb6f6a7461537dbb213a9e2e
Comment 6 Samba QA Contact 2023-12-28 17:16:03 UTC
This bug was referenced in samba v4-19-test:

8c63b219a2688ebbe3fcb1e3fd03af4512c3c6e0
Comment 7 Jule Anger 2023-12-29 07:45:36 UTC
Closing out bug report.

Thanks!
Comment 8 Samba QA Contact 2024-01-08 14:39:58 UTC
This bug was referenced in samba v4-19-stable (Release samba-4.19.4):

8c63b219a2688ebbe3fcb1e3fd03af4512c3c6e0
Comment 9 Samba QA Contact 2024-01-31 20:42:48 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.10):

c2c111688c49feaffb6f6a7461537dbb213a9e2e